--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/jest": "^29.2.3",
     "jest": "^29.3.1",
+    "jest-canvas-mock": "^2.5.1",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-mock-extended": "^3.0.1",
     "ts-jest": "^29.0.3"
   }
